[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 262.0
margin_top = 161.0
margin_right = 762.0
margin_bottom = 439.0
custom_constants/separation = 20
alignment = 1

[node name="TextoParaAlmacenar" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 24.0
rect_min_size = Vector2( 500, 0 )
text = "TEXTO A ALMACENAR"
align = 1

[node name="Espacio" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 500.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 15 )

[node name="SaveBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 500.0
margin_bottom = 99.0
text = "GUARDAR TEXTO"

[node name="Espacio2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 500.0
margin_bottom = 169.0
rect_min_size = Vector2( 0, 50 )

[node name="ShowBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 500.0
margin_bottom = 209.0
text = "LEER FICHERO ALMACENADO"

[node name="Espacio3" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 500.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 15 )

[node name="ShowMessage" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 500.0
margin_bottom = 278.0
text = "TEXTO LEIDO"
align = 1
autowrap = true

[connection signal="focus_entered" from="CenterContainer/VBoxContainer/TextoParaAlmacenar" to="." method="_on_TextoParaAlmacenar_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveBtn" to="." method="_on_SaveBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ShowBtn" to="." method="_on_ShowBtn_pressed"]
